@@ -4,10 +4,12 @@ import com.cafe.mycafe.domain.entity.UserEntity;
 import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 
 public class CustomUserDetails implements UserDetails {
@@ -38,7 +40,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 권한 필요 없으면 비워두기
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
